--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>calculator</h1>
+
+    <div class="calculator">
+      <div id="output"></div>
+      <div class="buttons">
+        <button class="erase" id="clear">C</button>
+        <button class="erase" id="delete">del</button>
+        <button class="dialpad operator">%</button>
+        <button class="dialpad operator">/</button>
+        <button class="dialpad">7</button>
+        <button class="dialpad">8</button>
+        <button class="dialpad">9</button>
+        <button class="dialpad operator">X</button>
+        <button class="dialpad">4</button>
+        <button class="dialpad">5</button>
+        <button class="dialpad">6</button>
+        <button class="dialpad operator">-</button>
+        <button class="dialpad">1</button>
+        <button class="dialpad">2</button>
+        <button class="dialpad">3</button>
+        <button class="dialpad operator">+</button>
+        <button class="notation operator" id="negative">+/-</button>
+        <button class="dialpad">0</button>
+        <button class="notation operator" id="decimal">.</button>
+        <button class="operator" id="evaluate">=</button>
+      </div>
+    </div>
+  </body>
 </html>
