added keyboard Accessibility

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
       <div class="buttons">
         <button class="erase" id="clear">C</button>
         <button class="erase" id="delete">del</button>
-        <button class="dialpad operator">%</button>
-        <button class="dialpad operator">/</button>
-        <button class="dialpad">7</button>
-        <button class="dialpad">8</button>
-        <button class="dialpad">9</button>
-        <button class="dialpad operator">X</button>
-        <button class="dialpad">4</button>
-        <button class="dialpad">5</button>
-        <button class="dialpad">6</button>
-        <button class="dialpad operator">-</button>
-        <button class="dialpad">1</button>
-        <button class="dialpad">2</button>
-        <button class="dialpad">3</button>
-        <button class="dialpad operator">+</button>
+        <button class="dialpad operator" id="%">%</button>
+        <button class="dialpad operator" id="/">/</button>
+        <button class="dialpad" id="7">7</button>
+        <button class="dialpad" id="8">8</button>
+        <button class="dialpad" id="9">9</button>
+        <button class="dialpad operator" id="*">X</button>
+        <button class="dialpad" id="4">4</button>
+        <button class="dialpad" id="5">5</button>
+        <button class="dialpad" id="6">6</button>
+        <button class="dialpad operator" id="-">-</button>
+        <button class="dialpad" id="1">1</button>
+        <button class="dialpad" id="2">2</button>
+        <button class="dialpad" id="3">3</button>
+        <button class="dialpad operator" id="+">+</button>
         <button class="notation operator" id="negative">+/-</button>
-        <button class="dialpad">0</button>
+        <button class="dialpad" id="0">0</button>
         <button class="notation operator" id="decimal">.</button>
         <button class="operator" id="evaluate">=</button>
       </div>
